// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots React|Options hiding addon panel 1`] = `
<div>
  <div>
    This story should have changed hidden the addons panel
  </div>
</div>
`;

exports[`Storyshots React|Options setting name 1`] = `
<div>
  <div>
    This story should have changed the name of the storybook
  </div>
</div>
`;
